style: 💄 issues with spacing in manage scopes pages for a role (#2515)
* style: 💄 issues with spacing in manage scopes pages for a role

✅ Closes: https://hashicorp.atlassian.net/browse/ICU-15287

--- a/ui/admin/app/styles/app.scss
+++ b/ui/admin/app/styles/app.scss
@@ -1035,6 +1035,7 @@
   .table-selected-items-text {
     display: flex;
     justify-content: end;
+    height: 1rem;
   }
 
   .hds-table {
